--- a/src/customComponents/Box/Box.css
+++ b/src/customComponents/Box/Box.css
@@ -5,4 +5,6 @@ box-l {
   /* ↓ For high contrast mode */
   outline: 0.125rem solid transparent;
   outline-offset: -0.125rem;
+    color: var(--text-3) !important;
+    background-color: var(--surface-3) !important;
 }
