--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -11,6 +11,7 @@ import type { BlogSchemaType } from '../schemas'
 
 type Props = {
   data: BlogSchemaType
+  children: unknown
 }
 
 const { data } = Astro.props
