--- a/src/pages/demo/grid-demo.astro
+++ b/src/pages/demo/grid-demo.astro
@@ -5,22 +5,22 @@ import { Image } from 'astro:assets'
 import Card from '@components/Card.astro'
 import { Frame, Grid } from '@cc/index.ts'
 
-const W = 300
-const H = 300
+const W = '180'
+const H = '180'
+const getRandomSrc = () => {
+  const random = Math.floor(Math.random() * 1000).toString()
+
+  return `https://picsum.photos/300/300?random=${random}`
+}
 ---
 
 <!-- heroImage="/blog-placeholder-about.jpg" -->
 <Layout title="test Me" description="Lorem ipsum dolor sit amet">
   <!-- space set the gap on the grid -->
-  <Grid space="1rem" min="300px">
+  <Grid space="1rem" min=`${250}px`>
     <Card>
       <Frame ratio="16:9" slot="image-slot">
-        <Image
-          width={W}
-          height={H}
-          src=`https://picsum.photos/${W}/${H}?random=${Math.floor(Math.random() * 1000)}`
-          alt="Image alt text"
-        />
+        <Image width={W} height={H} src={getRandomSrc()} alt="Image alt text" />
       </Frame></Card
     >
 
@@ -29,12 +29,7 @@ const H = 300
       description="At the forefront of industry innovation, our paradigm-shifting ecosystem leverages synergistic partnerships to drive holistic growth. By harnessing the power of big data analytics and machine learning algorithms, we're redefining the boundaries of operational excellence. Our commitment to disruptive technologies ensures we stay ahead of the curve, delivering unparalleled value to our stakeholders."
     >
       <Frame ratio="16:9" slot="image-slot">
-        <Image
-          width={W}
-          height={H}
-          src=`https://picsum.photos/${W}/${H}?random=${Math.floor(Math.random() * 1000)}`
-          alt="Image alt text"
-        />
+        <Image width={W} height={H} src={getRandomSrc()} alt="Image alt text" />
       </Frame></Card
     >
 
@@ -42,34 +37,19 @@ const H = 300
       description=`In today's fast-paced digital landscape, our mission is to empower clients through transformative solutions that integrate seamlessly with their core business processes. Our agile methodologies and customer-centric approach enable us to deliver bespoke innovations that are both scalable and sustainable. We're not just about the technology; we're about building lasting relationships that foster mutual success.`
     >
       <Frame ratio="16:9" slot="image-slot">
-        <Image
-          width={W}
-          height={H}
-          src=`https://picsum.photos/${W}/${H}?random=${Math.floor(Math.random() * 1000)}`
-          alt="Image alt text"
-        />
+        <Image width={W} height={H} src={getRandomSrc()} alt="Image alt text" />
       </Frame></Card
     >
 
     <Card>
       <Frame ratio="16:9" slot="image-slot">
-        <Image
-          width={W}
-          height={H}
-          src=`https://picsum.photos/${W}/${H}?random=${Math.floor(Math.random() * 1000)}`
-          alt="Image alt text"
-        />
+        <Image width={W} height={H} src={getRandomSrc()} alt="Image alt text" />
       </Frame></Card
     >
 
     <Card>
       <Frame ratio="16:9" slot="image-slot">
-        <Image
-          width={W}
-          height={H}
-          src=`https://picsum.photos/${W}/${H}?random=${Math.floor(Math.random() * 1000)}`
-          alt="Image alt text"
-        />
+        <Image width={W} height={H} src={getRandomSrc()} alt="Image alt text" />
       </Frame></Card
     >
 
@@ -78,12 +58,7 @@ const H = 300
       description="At the forefront of industry innovation, our paradigm-shifting ecosystem leverages synergistic partnerships to drive holistic growth. By harnessing the power of big data analytics and machine learning algorithms, we're redefining the boundaries of operational excellence. Our commitment to disruptive technologies ensures we stay ahead of the curve, delivering unparalleled value to our stakeholders."
     >
       <Frame ratio="16:9" slot="image-slot">
-        <Image
-          width={W}
-          height={H}
-          src=`https://picsum.photos/${W}/${H}?random=${Math.floor(Math.random() * 1000)}`
-          alt="Image alt text"
-        />
+        <Image width={W} height={H} src={getRandomSrc()} alt="Image alt text" />
       </Frame></Card
     >
 
@@ -91,12 +66,7 @@ const H = 300
       description=`In today's fast-paced digital landscape, our mission is to empower clients through transformative solutions that integrate seamlessly with their core business processes. Our agile methodologies and customer-centric approach enable us to deliver bespoke innovations that are both scalable and sustainable. We're not just about the technology; we're about building lasting relationships that foster mutual success.`
     >
       <Frame ratio="16:9" slot="image-slot">
-        <Image
-          width={W}
-          height={H}
-          src=`https://picsum.photos/${W}/${H}?random=${Math.floor(Math.random() * 1000)}`
-          alt="Image alt text"
-        />
+        <Image width={W} height={H} src={getRandomSrc()} alt="Image alt text" />
       </Frame></Card
     >
   </Grid>
