--- a/src/components/FormattedDate.astro
+++ b/src/components/FormattedDate.astro
@@ -7,7 +7,7 @@ interface Props {
 const { date } = Astro.props
 ---
 
-<Box
+<Box borderWidth="0" padding="0"
   ><time datetime={date.toISOString()}>
     {
       date.toLocaleDateString('en-us', {
@@ -18,3 +18,10 @@ const { date } = Astro.props
     }
   </time></Box
 >
+
+<style>
+  time {
+    font-size: 0.8em;
+    color: #666;
+  }
+</style>
