--- a/src/styles/GlobalStyles.astro
+++ b/src/styles/GlobalStyles.astro
@@ -1,59 +1,47 @@
 ---
-import 'open-props/postcss/style'
+// import 'open-props/postcss/style'
 import 'open-props/postcss/buttons'
 import 'open-props/postcss/normalize'
-
+import './variables.css'
 import './modular-scale.css'
-
-import './utilities.css'
 ---
 
 <style is:global>
-  /* @layer base, utils, vars;
-  @import url('open-props/postcss/style') layer(base);
-  @import url('open-props/postcss/buttons') layer(base);
-  @import url('open-props/postcss/normalize') layer(base);
-  @import url('./modular-scale.css') layer(base);
-  @import url('./utilities.css') layer(utils);
-  @import url('./variables.css') layer(vars); */
-  /* @import url('./light.css') layer(light);
-  @import url('./dark.css') layer(dark);
+  html {
+    font-family: var(--font-sans);
 
-  @layer themes {
-    @layer light;
-  } */
+    color-scheme: dark;
 
-  :root {
-    --color-light: hsl(0 0% 80%);
-    --color-dark: hsl(0 0% 20%);
+    /* set defaults */
+    --brand: var(--brand-light);
+    --text-1: var(--text-1-light);
+    --text-2: var(--text-2-light);
+    --surface-1: var(--surface-1-light);
+    --surface-2: var(--surface-2-light);
+    --surface-3: var(--surface-3-light);
+    --surface-4: var(--surface-4-light);
+    --surface-shadow: var(--surface-shadow-light);
+    --shadow-strength: var(--shadow-strength-light);
+  }
 
-    /* light */
-    --brand-light: var(--orange-12);
+  [class^='box'].invert {
+    filter: invert(100%);
+  }
 
-    /* open-props light theme as defaults but these are better */
-    --text-1-light: var(--gray-12);
-    --text-2-light: var(--gray-7);
-    --surface-1-light: var(--gray-0);
-    --surface-2-light: var(--gray-1);
-    --surface-3-light: var(--gray-2);
-    --surface-4-light: var(--gray-3);
-
-    --surface-shadow-light: var(--gray-8-hsl);
-    --shadow-strength-light: 2%;
-
-    /* dark */
-    --brand-dark: var(--orange-3);
-
-    /* open-props dark theme as defaults but these are better */
-    --text-1-dark: var(--gray-3);
-    --text-2-dark: var(--gray-5);
-    --surface-1-dark: var(--gray-12);
-    --surface-2-dark: var(--gray-11);
-    --surface-3-dark: var(--gray-10);
-    --surface-4-dark: var(--gray-9);
-
-    --surface-shadow-dark: var(--gray-12-hsl);
-    --shadow-strength-dark: 80%;
+  [class^='box'] {
+    * {
+      color: inherit;
+      background-color: inherit;
+    }
+  }
+  .myLayoutColors {
+    background-color: var(--surface-3);
+    color: var(--text-3);
+  }
+  .gradient-text {
+    background: var(--gradient-1);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
   }
 
   @media (prefers-color-scheme: dark) {
