--- a/src/layouts/LayoutWcover.astro
+++ b/src/layouts/LayoutWcover.astro
@@ -1,7 +1,4 @@
 ---
-import GlobalStyle from '@styles/GlobalStyles.astro'
-
-import { ViewTransitions } from 'astro:transitions'
 import BaseHead from '@components/BaseHead.astro'
 import Header from '@components/Header.astro'
 import Footer from '@components/Footer.astro'
@@ -19,12 +16,10 @@ const { title = 'I NEED A TITLE', description = 'no description provided' } =
 const canonicalURL = new URL(Astro.url.pathname, Astro.site)
 ---
 
-<html lang="en" transition:animate="none">
+<html lang="en" transition:animate="none" color-scheme="dark">
   <head>
     <BaseHead title={title} description={description} />
     <link rel="canonical" href={canonicalURL} />
-    <ViewTransitions />
-    <GlobalStyle />
   </head>
 
   <body>
