--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,6 +18,13 @@ import { Box, Stack } from '@cc/index.ts'
         vel magnam eaque maxime sit quos. Totam deserunt modi facere ipsam ab
         harum, voluptate, sapiente alias, quo impedit dolores eaque!
       </p>
+      <Box invert>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere
+          deleniti vel magnam eaque maxime sit quos. Totam deserunt modi facere
+          ipsam ab harum, voluptate, sapiente alias, quo impedit dolores eaque!
+        </p>
+      </Box>
     </Box>
   </Stack>
 </Layout>
