--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -1,6 +1,6 @@
 ---
 import type { HTMLAttributes } from 'astro/types'
-import { Box, Cluster } from '@cc/index'
+import { Cluster } from '@cc/index'
 type Props = HTMLAttributes<'a'> & {
   slug?: string
 }
