--- a/src/pages/demo/reel-demo.astro
+++ b/src/pages/demo/reel-demo.astro
@@ -20,12 +20,7 @@ const getRandomSrc = () => {
   <Reel itemWidth="20rem" noBar={false}>
     <Card>
       <Frame ratio="16:9" slot="image-slot">
-        <Image
-          width={W}
-          height={H}
-          src= {getRandomSrc()}
-          alt="Image alt text"
-        />
+        <Image width={W} height={H} src={getRandomSrc()} alt="Image alt text" />
       </Frame></Card
     >
 
@@ -34,12 +29,7 @@ const getRandomSrc = () => {
       description="At the forefront of industry innovation, our paradigm-shifting ecosystem leverages synergistic partnerships to drive holistic growth. By harnessing the power of big data analytics and machine learning algorithms, we're redefining the boundaries of operational excellence. Our commitment to disruptive technologies ensures we stay ahead of the curve, delivering unparalleled value to our stakeholders."
     >
       <Frame ratio="16:9" slot="image-slot">
-        <Image
-          width={W}
-          height={H}
-          src= {getRandomSrc()}
-          alt="Image alt text"
-        />
+        <Image width={W} height={H} src={getRandomSrc()} alt="Image alt text" />
       </Frame></Card
     >
 
@@ -47,34 +37,19 @@ const getRandomSrc = () => {
       description=`In today's fast-paced digital landscape, our mission is to empower clients through transformative solutions that integrate seamlessly with their core business processes. Our agile methodologies and customer-centric approach enable us to deliver bespoke innovations that are both scalable and sustainable. We're not just about the technology; we're about building lasting relationships that foster mutual success.`
     >
       <Frame ratio="16:9" slot="image-slot">
-        <Image
-          width={W}
-          height={H}
-          src= {getRandomSrc()}
-          alt="Image alt text"
-        />
+        <Image width={W} height={H} src={getRandomSrc()} alt="Image alt text" />
       </Frame></Card
     >
 
     <Card>
       <Frame ratio="16:9" slot="image-slot">
-        <Image
-          width={W}
-          height={H}
-          src= {getRandomSrc()}
-          alt="Image alt text"
-        />
+        <Image width={W} height={H} src={getRandomSrc()} alt="Image alt text" />
       </Frame></Card
     >
 
     <Card>
       <Frame ratio="16:9" slot="image-slot">
-        <Image
-          width={W}
-          height={H}
-          src= {getRandomSrc()}
-          alt="Image alt text"
-        />
+        <Image width={W} height={H} src={getRandomSrc()} alt="Image alt text" />
       </Frame></Card
     >
 
@@ -83,12 +58,7 @@ const getRandomSrc = () => {
       description="At the forefront of industry innovation, our paradigm-shifting ecosystem leverages synergistic partnerships to drive holistic growth. By harnessing the power of big data analytics and machine learning algorithms, we're redefining the boundaries of operational excellence. Our commitment to disruptive technologies ensures we stay ahead of the curve, delivering unparalleled value to our stakeholders."
     >
       <Frame ratio="16:9" slot="image-slot">
-        <Image
-          width={W}
-          height={H}
-          src= {getRandomSrc()}
-          alt="Image alt text"
-        />
+        <Image width={W} height={H} src={getRandomSrc()} alt="Image alt text" />
       </Frame></Card
     >
 
@@ -96,12 +66,7 @@ const getRandomSrc = () => {
       description=`In today's fast-paced digital landscape, our mission is to empower clients through transformative solutions that integrate seamlessly with their core business processes. Our agile methodologies and customer-centric approach enable us to deliver bespoke innovations that are both scalable and sustainable. We're not just about the technology; we're about building lasting relationships that foster mutual success.`
     >
       <Frame ratio="16:9" slot="image-slot">
-        <Image
-          width={W}
-          height={H}
-          src= {getRandomSrc()}
-          alt="Image alt text"
-        />
+        <Image width={W} height={H} src={getRandomSrc()} alt="Image alt text" />
       </Frame></Card
     >
   </Reel>
