--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,7 +2,7 @@
 import HeaderLink from './HeaderLink.astro'
 
 import { Box, Cluster } from '@cc/index'
-import Select from '@components/Select'
+import Select from '@/components/Select'
 ---
 
 <Box invert padding="var(--s1)" borderWidth="0">
