--- a/src/customComponents/Cover/index.astro
+++ b/src/customComponents/Cover/index.astro
@@ -2,7 +2,7 @@
 import './Cover.css'
 import type { RmUnitType } from '../Types'
 
-type Props = {
+interface Props {
   centeredElement?: string // h1
   space?: RmUnitType //"var(--s1)"
   minHeight?: RmUnitType //"100vh"
