--- a/src/customComponents/Switcher/index.astro
+++ b/src/customComponents/Switcher/index.astro
@@ -2,7 +2,7 @@
 import './Switcher.css'
 import type { RmUnitType } from '../Types'
 
-type Props = {
+interface Props {
   threshold?: RmUnitType //"var(--measure)"
   space?: RmUnitType // "var(--s1)"
   limit?: number //limit = 4
