--- a/src/pages/demo/grid-demo.astro
+++ b/src/pages/demo/grid-demo.astro
@@ -1,8 +1,8 @@
 ---
-import Layout from '@layouts/LayoutWcover.astro'
+import Layout from '@/layouts/LayoutWcover.astro'
 
 import { Image } from 'astro:assets'
-import Card from '@components/Card.astro'
+import Card from '@/components/Card.astro'
 import { Frame, Grid } from '@cc/index.ts'
 
 const W = '180'
