--- a/src/pages/demo/reel-demo.astro
+++ b/src/pages/demo/reel-demo.astro
@@ -1,11 +1,11 @@
 ---
 import { Reel, Frame } from '@cc/index.ts'
-import Card from '@components/Card.astro'
+import Card from '@/components/Card.astro'
 import { Image } from 'astro:assets'
 
-// import DummCards from '@components/DummyCards.astro'
+// import DummCards from '@/components/DummyCards.astro'
 
-import Layout from '@layouts/LayoutWcover.astro'
+import Layout from '@/layouts/LayoutWcover.astro'
 
 const W = '100'
 const H = '50'
