--- a/src/pages/demo/sidebar-demo.astro
+++ b/src/pages/demo/sidebar-demo.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from '@layouts/LayoutWcover.astro'
+import Layout from '@/layouts/LayoutWcover.astro'
 
 import { Box, Sidebar } from '@cc/index.ts'
 import { Image } from 'astro:assets'
