--- a/src/customComponents/Center/index.astro
+++ b/src/customComponents/Center/index.astro
@@ -2,7 +2,7 @@
 import './Center.css'
 import type { RmUnitType } from '../Types'
 
-type Props = {
+interface Props {
   max?: RmUnitType
   andText?: boolean
   gutters?: boolean
