--- a/src/customComponents/Sidebar/index.astro
+++ b/src/customComponents/Sidebar/index.astro
@@ -2,7 +2,7 @@
 import './Sidebar.css'
 import type { Percentage, RmUnitType } from '../Types.ts'
 
-type Props = {
+interface Props {
   side?: 'left' | 'right'
   sideWidth?: RmUnitType //Represents the width of the sidebar when adjacent. If not set (null) it defaults to the sidebar's content width
   contentMin?: Percentage //A CSS percentage value. The minimum width of the content element in the horizontal configuration
