--- a/src/customComponents/Stack/index.astro
+++ b/src/customComponents/Stack/index.astro
@@ -1,7 +1,7 @@
 ---
 import './Stack.css'
 import type { RmUnitType } from '../Types'
-type Props = {
+interface Props {
   space?: RmUnitType //"var(--s1)"
   recursive?: boolean //false
   splitAfter?: number // no default. The element after which to split the stack with an auto margin
