--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -4,15 +4,9 @@
 import { Box, Stack, Center } from '@cc/index.ts'
 import { Image } from 'astro:assets'
 
-import FormattedDate from '@components/FormattedDate.astro'
-// import Author from '@components/Author.astro'
-import Layout from '@layouts/LayoutWcover.astro'
-import type { BlogSchemaType } from '../schemas'
-
-type Props = {
-  data: BlogSchemaType
-  children: unknown
-}
+import FormattedDate from '@/components/FormattedDate.astro'
+// import Author from '@/components/Author.astro'
+import Layout from '@/layouts/LayoutWcover.astro'
 
 const { data } = Astro.props
 
@@ -24,7 +18,7 @@ const { title, description, pubDate, cover } = data
     <Stack>
       <Image
         src={cover.src}
-        width="1200"
+        width="60ch"
         sizes={`(max-width: 360px) 240px, (max-width: 720px) 540px, (max-width: 1600px) 720px`}
         height="300"
         alt={cover.description}
