--- a/src/pages/demo/container-demo.astro
+++ b/src/pages/demo/container-demo.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from '@layouts/LayoutWcover.astro'
+import Layout from '@/layouts/LayoutWcover.astro'
 
 // import {} from '@c/index.ts'
 ---
