use astro-custom-layout-components/

--- a/src/components/ClusterExample.astro
+++ b/src/components/ClusterExample.astro
@@ -15,7 +15,7 @@ function generateRandomString() {
 ---
 
 <Box>
-  <Cluster role="'list">
+  <Cluster>
     <div role="listitem"><a href="#tag3">{generateRandomString()}</a></div>
     <div role="listitem"><a href="#tag4">{generateRandomString()}</a></div>
     <div role="listitem"><a href="#tag1">{generateRandomString()}</a></div>
