--- a/src/pages/demo/grid-demo.astro
+++ b/src/pages/demo/grid-demo.astro
@@ -3,7 +3,7 @@ import Layout from '@/layouts/LayoutWcover.astro'
 
 import { Image } from 'astro:assets'
 import Card from '@/components/Card.astro'
-import { Frame, Grid } from '@cc/index.ts'
+import { Frame, Grid } from '@cc/index.js'
 
 const W = '180'
 const H = '180'
