--- a/src/pages/demo/harmonic-demo.astro
+++ b/src/pages/demo/harmonic-demo.astro
@@ -11,7 +11,7 @@
 // }
 
 import Layout from '@/layouts/LayoutWcover.astro'
-import { Cluster, Box } from '@cc/index.ts'
+import { Cluster, Box } from '@cc/index.js'
 ---
 
 <Layout>
