--- a/src/pages/demo/reel-demo.astro
+++ b/src/pages/demo/reel-demo.astro
@@ -1,9 +1,9 @@
 ---
-import { Reel, Frame } from '@cc/index.ts'
+import { Reel, Frame } from '@cc/index.js'
 import Card from '@/components/Card.astro'
 import { Image } from 'astro:assets'
 
-// import DummCards from '@/components/DummyCards.astro'
+// import DummCards from '@cc/DummyCards.astro'
 
 import Layout from '@/layouts/LayoutWcover.astro'
 
