--- a/src/pages/demo/sidebar-demo.astro
+++ b/src/pages/demo/sidebar-demo.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from '@/layouts/LayoutWcover.astro'
 
-import { Box, Sidebar } from '@cc/index.ts'
+import { Box, Sidebar } from '@cc/index.js'
 import { Image } from 'astro:assets'
 ---
 
