--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from '@/layouts/LayoutWcover.astro'
 
 // import { SITE_TITLE, SITE_DESCRIPTION } from '../consts'
 
-import { Box, Stack } from '@cc/index.ts'
+import { Box, Stack } from '@cc/index.js'
 ---
 
 <Layout title="home" description="testing css">
