--- a/src/components/Dialouge.astro
+++ b/src/components/Dialouge.astro
@@ -1,8 +1,8 @@
 ---
-import { Box, Stack, Center } from '@cc/index.js'
+import { Box, Stack, Center } from '@cc/index.js';
 
-import CloseBtn from './CloseBtn.astro'
-import ConfetiBtn from './ConfettiButton.astro'
+import CloseBtn from './CloseBtn.astro';
+import ConfetiBtn from './ConfettiButton.astro';
 ---
 
 <Box>
