--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,7 @@
 ---
-import { Box, Cluster } from '@cc/index'
+import { Box, Cluster } from '@cc/index';
 
-const today = new Date()
+const today = new Date();
 ---
 
 <Box invert padding="var(--s1)" borderWidth="0">
