--- a/src/components/FormattedDate.astro
+++ b/src/components/FormattedDate.astro
@@ -1,10 +1,10 @@
 ---
-import { Box } from '@cc/index'
+import { Box } from '@cc/index';
 interface Props {
-  date: Date
+  date: Date;
 }
 
-const { date } = Astro.props
+const { date } = Astro.props;
 ---
 
 <Box borderWidth="0" padding="0"
