--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -1,11 +1,11 @@
 ---
-import type { HTMLAttributes } from 'astro/types'
-import { Cluster } from '@cc/index'
+import type { HTMLAttributes } from 'astro/types';
+import { Cluster } from '@cc/index';
 type Props = HTMLAttributes<'a'> & {
-  slug?: string
-}
+  slug?: string;
+};
 
-const { href } = Astro.props
+const { href } = Astro.props;
 // const { pathname } = Astro.url
 ---
 
