--- a/src/components/ThemeIcon.astro
+++ b/src/components/ThemeIcon.astro
@@ -49,23 +49,23 @@
         typeof localStorage !== 'undefined' &&
         localStorage.getItem('theme')
       ) {
-        return localStorage.getItem('theme')
+        return localStorage.getItem('theme');
       }
       if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
-        return 'dark'
+        return 'dark';
       }
-      return 'light'
-    })()
+      return 'light';
+    })();
 
     if (theme === 'light') {
-      document.documentElement.classList.remove('dark')
+      document.documentElement.classList.remove('dark');
     } else {
-      document.documentElement.classList.add('dark')
+      document.documentElement.classList.add('dark');
     }
 
-    window.localStorage.setItem('theme', theme)
+    window.localStorage.setItem('theme', theme);
 
-    const btnSunMoo = document.getElementById('themeToggle')
+    const btnSunMoo = document.getElementById('themeToggle');
 
     // const handleToggleClick = () => {
     //   const element = document.documentElement;
@@ -76,18 +76,18 @@
     // };
 
     btnSunMoo.addEventListener('click', (e) => {
-      alert('click')
-      const element = document.documentElement
+      alert('click');
+      const element = document.documentElement;
       // // element.classList.toggle('dark')
 
       // const isDark = element.classList.contains('dark')
-      const isDark = element.getAttribute('color-theme')
+      const isDark = element.getAttribute('color-theme');
 
-      element.setAttribute('color-theme', isDark ? 'light' : 'dark')
+      element.setAttribute('color-theme', isDark ? 'light' : 'dark');
 
-      localStorage.setItem('theme', isDark ? 'light' : 'dark')
+      localStorage.setItem('theme', isDark ? 'light' : 'dark');
 
       // e.target.setAttribute('data-state', isDark ? 'moon' : 'sun')
-    })
-  })
+    });
+  });
 </script>
