--- a/src/pages/demo/harmonic-demo.astro
+++ b/src/pages/demo/harmonic-demo.astro
@@ -10,8 +10,8 @@
 //   return value
 // }
 
-import Layout from '@/layouts/LayoutWcover.astro'
-import { Cluster, Box } from '@cc/index.js'
+import Layout from '@/layouts/LayoutWcover.astro';
+import { Cluster, Box } from '@cc/index.js';
 ---
 
 <Layout>
