--- a/src/pages/demo/switcher-demo.astro
+++ b/src/pages/demo/switcher-demo.astro
@@ -1,6 +1,6 @@
 ---
-import Layout from '@/layouts/LayoutWcover.astro'
-import { Box, Switcher } from '@cc/index'
+import Layout from '@/layouts/LayoutWcover.astro';
+import { Box, Switcher } from '@cc/index';
 ---
 
 <!-- heroImage="/blog-placeholder-about.jpg" -->
