--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,9 @@
 ---
-import Layout from '@/layouts/LayoutWcover.astro'
+import Layout from '@/layouts/LayoutWcover.astro';
 
 // import { SITE_TITLE, SITE_DESCRIPTION } from '../consts'
 
-import { Box, Stack } from '@cc/index.js'
+import { Box, Stack } from '@cc/index.js';
 ---
 
 <Layout title="home" description="testing css">
