--- a/src/styles/GlobalStyles.astro
+++ b/src/styles/GlobalStyles.astro
@@ -1,9 +1,9 @@
 ---
 // import 'open-props/postcss/style'
-import 'open-props/postcss/buttons'
-import 'open-props/postcss/normalize'
-import './variables.css'
-import './modular-scale.css'
+import 'open-props/postcss/buttons';
+import 'open-props/postcss/normalize';
+import './variables.css';
+import './modular-scale.css';
 ---
 
 <style is:global>
