--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,18 +1,18 @@
 ---
 // Import the global.css file here so that it is included on
 // all pages through the use of the <BaseHead /> component.
-import GlobalStyles from '@/styles/GlobalStyles.astro'
-import { ViewTransitions } from 'astro:transitions'
+import GlobalStyles from '@/styles/GlobalStyles.astro';
+import { ViewTransitions } from 'astro:transitions';
 
 interface Props {
-  title: string
-  description: string
-  image?: string
+  title: string;
+  description: string;
+  image?: string;
 }
 
-const canonicalURL = new URL(Astro.url.pathname, Astro.site)
+const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 
-const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props
+const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
 ---
 
 <!-- Global Metadata -->
