--- a/src/components/BoxWithHeader.astro
+++ b/src/components/BoxWithHeader.astro
@@ -1,5 +1,5 @@
 ---
-import { Box, Stack, Center } from '@cc/index.js'
+import { Box, Stack, Center } from '@cc/index.js';
 ---
 
 <Box padding="0" borderWidth="0">
