--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,16 +1,16 @@
 ---
 // import type { CollectionEntry } from 'astro:content'
 // import { getEntry } from 'astro:content'
-import { Box, Stack, Center } from '@cc/index.js'
-import { Image } from 'astro:assets'
+import { Box, Stack, Center } from '@cc/index.js';
+import { Image } from 'astro:assets';
 
-import FormattedDate from '@/components/FormattedDate.astro'
+import FormattedDate from '@/components/FormattedDate.astro';
 // import Author from '@cc/Author.astro'
-import Layout from '@/layouts/LayoutWcover.astro'
+import Layout from '@/layouts/LayoutWcover.astro';
 
-const { data } = Astro.props
+const { data } = Astro.props;
 
-const { title, description, pubDate, cover } = data
+const { title, description, pubDate, cover } = data;
 ---
 
 <Layout title="blog post" description="Lorem ipsum dolor sit amet">
