--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,6 @@
 ---
-import Layout from '@/layouts/LayoutWcover.astro'
-import { Box, Stack, Center } from '@cc/index.js'
+import Layout from '@/layouts/LayoutWcover.astro';
+import { Box, Stack, Center } from '@cc/index.js';
 ---
 
 <!-- heroImage="/blog-placeholder-about.jpg" -->
