--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,12 +1,12 @@
 ---
-import { getCollection } from 'astro:content'
-import FormattedDate from '@/components/FormattedDate.astro'
-import Layout from '@/layouts/LayoutWcover.astro'
-import { Switcher, Box } from '@cc/index'
+import { getCollection } from 'astro:content';
+import FormattedDate from '@/components/FormattedDate.astro';
+import Layout from '@/layouts/LayoutWcover.astro';
+import { Switcher, Box } from '@cc/index';
 
 const posts = (await getCollection('blog')).sort(
   (a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf(),
-)
+);
 ---
 
 <Layout title="blog post" description="Lorem ipsum dolor sit amet">
