--- a/src/pages/demo/cluster-demo.astro
+++ b/src/pages/demo/cluster-demo.astro
@@ -1,7 +1,7 @@
 ---
-import Layout from '@/layouts/LayoutWcover.astro'
+import Layout from '@/layouts/LayoutWcover.astro';
 
-import ClusterExample from '@/components/ClusterExample.astro'
+import ClusterExample from '@/components/ClusterExample.astro';
 ---
 
 <Layout>
