--- a/src/pages/demo/grid-demo.astro
+++ b/src/pages/demo/grid-demo.astro
@@ -1,17 +1,17 @@
 ---
-import Layout from '@/layouts/LayoutWcover.astro'
+import Layout from '@/layouts/LayoutWcover.astro';
 
-import { Image } from 'astro:assets'
-import Card from '@/components/Card.astro'
-import { Frame, Grid } from '@cc/index.js'
+import { Image } from 'astro:assets';
+import Card from '@/components/Card.astro';
+import { Frame, Grid } from '@cc/index.js';
 
-const W = '180'
-const H = '180'
+const W = '180';
+const H = '180';
 const getRandomSrc = () => {
-  const random = Math.floor(Math.random() * 1000).toString()
+  const random = Math.floor(Math.random() * 1000).toString();
 
-  return `https://picsum.photos/300/300?random=${random}`
-}
+  return `https://picsum.photos/300/300?random=${random}`;
+};
 ---
 
 <!-- heroImage="/blog-placeholder-about.jpg" -->
