--- a/src/pages/demo/imposter-demo.astro
+++ b/src/pages/demo/imposter-demo.astro
@@ -1,6 +1,6 @@
 ---
-import Layout from '@/layouts/LayoutWcover.astro'
-import { Imposter, Cluster } from '@cc/index.js'
+import Layout from '@/layouts/LayoutWcover.astro';
+import { Imposter, Cluster } from '@cc/index.js';
 ---
 
 <!-- heroImage="/blog-placeholder-about.jpg" -->
