--- a/src/pages/demo/sidebar-demo.astro
+++ b/src/pages/demo/sidebar-demo.astro
@@ -1,8 +1,8 @@
 ---
-import Layout from '@/layouts/LayoutWcover.astro'
+import Layout from '@/layouts/LayoutWcover.astro';
 
-import { Box, Sidebar } from '@cc/index.js'
-import { Image } from 'astro:assets'
+import { Box, Sidebar } from '@cc/index.js';
+import { Image } from 'astro:assets';
 ---
 
 <!-- heroImage="/blog-placeholder-about.jpg" -->
